--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+  --bg-color: hsl(49 37% 94%);
+  --typewriterSpeed: 6s;
+}
+
 body {
   margin: 0;
   min-height: 100vh;
@@ -10,6 +15,8 @@ body {
 h1 {
   font-size: clap(1rm, 3vw + 1rm, 4rem);
   position: relative;
+  /*outline: 2px solid red;*/
+  width: max-content;
 }
 
 h1::before,
@@ -23,7 +30,19 @@ h1::after {
 }
 
 h1::before {
-  background: teal;
+  background: var(--bg-color);
+  animation: typewriter var(--typewriterSpeed) steps(23) forwards;
+}
+h1::after {
+  width: 0.125em;
+  background: black;
+  animation: typewriter var(--typewriterSpeed) steps(23) forwards;
+}
+
+@keyframes typewriter {
+  to {
+    left: 100%;
+  }
 }
 
 .subtitle {
