--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
   --bg-color: hsl(49 37% 94%);
   --typewriterSpeed: 6s;
+  --typewriterCharacters: 24;
 }
 
 body {
@@ -31,13 +32,24 @@ h1::after {
 
 h1::before {
   background: var(--bg-color);
-  animation: typewriter var(--typewriterSpeed) steps(23) 1s forwards;
+  animation: typewriter var(--typewriterSpeed)
+    steps(var(--typewriterCharacters)) 1s forwards;
 }
 h1::after {
   width: 0.125em;
   background: black;
-  animation: typewriter var(--typewriterSpeed) steps(23) 1s forwards,
-    blink 750ms steps(23) infinite;
+  animation: typewriter var(--typewriterSpeed)
+      steps(var(--typewriterCharacters)) 1s forwards,
+    blink 750ms steps(var(--typewriterCharacters)) infinite;
+}
+
+.subtitle {
+  color: hs1(0 0% 0% /0.7);
+  font-size: 1.5rem;
+  font-weight: 400;
+  opacity: 0;
+  transform: translateY(3rem);
+  animation: fadeInUp 2s ease forwards;
 }
 
 @keyframes typewriter {
@@ -50,9 +62,9 @@ h1::after {
     background: transparent;
   }
 }
-
-.subtitle {
-  color: hs1(0 0% 0% /0.7);
-  font-size: 1.5rem;
-  font-weight: 400;
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
