--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h1::after {
   font-weight: 400;
   opacity: 0;
   transform: translateY(3rem);
-  animation: fadeInUp 2s ease forwards;
+  animation: fadeInUp 2s ease calc(var(--typewriterSpeed) + 2s) forwards;
 }
 
 @keyframes typewriter {
